// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Cards/SchoolCard with many locations 1`] = `
<article
  className="Card SchoolCard"
>
  <div
    className="giBillRibbon"
  >
    <span
      className="ScreenReaderOnly"
    >
      Accepts the 
    </span>
     GI Bill
  </div>
  <div
    className="cardBrand"
  >
    <img
      alt="General Assembly logo"
      height="150"
      src="https://s3.amazonaws.com/operationcode-assets/codeSchoolLogos/general_assembly.jpg"
    />
  </div>
  <div
    className="cardBlock"
  >
    <span
      className="cardBlockTitle"
    >
      Availability
    </span>
    <div
      className="badgeGroup"
    >
      <figure
        className="Badge badgeGroupItem active"
      >
        <svg />
        <figcaption
          className="label"
        >
          <span
            className="ScreenReaderOnly"
          >
            Has 
          </span>
          Online
          <span
            className="ScreenReaderOnly"
          >
            availability
          </span>
        </figcaption>
      </figure>
      <figure
        className="Badge badgeGroupItem active"
      >
        <svg />
        <figcaption
          className="label"
        >
          <span
            className="ScreenReaderOnly"
          >
            Has 
          </span>
          Campus
          <span
            className="ScreenReaderOnly"
          >
            availability
          </span>
        </figcaption>
      </figure>
      <figure
        className="Badge badgeGroupItem"
      >
        <svg />
        <figcaption
          className="label"
        >
          <span
            className="ScreenReaderOnly"
          >
            Does not have 
          </span>
          Housing
          <span
            className="ScreenReaderOnly"
          >
            availability
          </span>
        </figcaption>
      </figure>
      <figure
        className="Badge badgeGroupItem"
      >
        <svg />
        <figcaption
          className="label"
        >
          <span
            className="ScreenReaderOnly"
          >
            Does not have 
          </span>
          Equipment
          <span
            className="ScreenReaderOnly"
          >
            availability
          </span>
        </figcaption>
      </figure>
    </div>
  </div>
  <div
    className="cardBlock"
  >
    <span
      className="cardBlockTitle"
    >
      Accepts GI Bill
    </span>
    Yes
  </div>
  <div
    className="cardBlock"
  >
    <span
      className="cardBlockTitle"
    >
      Campus Locations
    </span>
    Multiple locations
     (
    <button
      className="Button modalToggler primary"
      disabled={false}
      onClick={[Function]}
      tabIndex={0}
      type="button"
    >
      view all
    </button>
    )
  </div>
  <div
    className="cardBlock"
  >
    <a
      className="Button primary fullWidth"
      href="https://generalassembly.com"
      onClick={[Function]}
    >
      Visit Website
    </a>
  </div>
</article>
`;

exports[`Storyshots Cards/SchoolCard with no physical locations 1`] = `
<article
  className="Card SchoolCard"
>
  <span
    className="ScreenReaderOnly"
  >
    Does not accept the GI Bill as payment
  </span>
  <div
    className="cardBrand"
  >
    <img
      alt="Thinkful logo"
      height="150"
      src="https://s3.amazonaws.com/operationcode-assets/codeSchoolLogos/thinkful.jpg"
    />
  </div>
  <div
    className="cardBlock"
  >
    <span
      className="cardBlockTitle"
    >
      Availability
    </span>
    <div
      className="badgeGroup"
    >
      <figure
        className="Badge badgeGroupItem active"
      >
        <svg />
        <figcaption
          className="label"
        >
          <span
            className="ScreenReaderOnly"
          >
            Has 
          </span>
          Online
          <span
            className="ScreenReaderOnly"
          >
            availability
          </span>
        </figcaption>
      </figure>
      <figure
        className="Badge badgeGroupItem"
      >
        <svg />
        <figcaption
          className="label"
        >
          <span
            className="ScreenReaderOnly"
          >
            Does not have 
          </span>
          Campus
          <span
            className="ScreenReaderOnly"
          >
            availability
          </span>
        </figcaption>
      </figure>
      <figure
        className="Badge badgeGroupItem"
      >
        <svg />
        <figcaption
          className="label"
        >
          <span
            className="ScreenReaderOnly"
          >
            Does not have 
          </span>
          Housing
          <span
            className="ScreenReaderOnly"
          >
            availability
          </span>
        </figcaption>
      </figure>
      <figure
        className="Badge badgeGroupItem"
      >
        <svg />
        <figcaption
          className="label"
        >
          <span
            className="ScreenReaderOnly"
          >
            Does not have 
          </span>
          Equipment
          <span
            className="ScreenReaderOnly"
          >
            availability
          </span>
        </figcaption>
      </figure>
    </div>
  </div>
  <div
    className="cardBlock"
  >
    <span
      className="cardBlockTitle"
    >
      Accepts GI Bill
    </span>
    No
  </div>
  <div
    className="cardBlock"
  >
    <span
      className="cardBlockTitle"
    >
      Campus Locations
    </span>
    Online only
  </div>
  <div
    className="cardBlock"
  >
    <a
      className="Button primary fullWidth"
      href="https://thinkful.com"
      onClick={[Function]}
    >
      Visit Website
    </a>
  </div>
</article>
`;

exports[`Storyshots Cards/SchoolCard with one location 1`] = `
<article
  className="Card SchoolCard"
>
  <span
    className="ScreenReaderOnly"
  >
    Does not accept the GI Bill as payment
  </span>
  <div
    className="cardBrand"
  >
    <img
      alt="Code Immersives logo"
      height="150"
      src="https://s3.amazonaws.com/operationcode-assets/codeSchoolLogos/code_immersives.jpg"
    />
  </div>
  <div
    className="cardBlock"
  >
    <span
      className="cardBlockTitle"
    >
      Availability
    </span>
    <div
      className="badgeGroup"
    >
      <figure
        className="Badge badgeGroupItem"
      >
        <svg />
        <figcaption
          className="label"
        >
          <span
            className="ScreenReaderOnly"
          >
            Does not have 
          </span>
          Online
          <span
            className="ScreenReaderOnly"
          >
            availability
          </span>
        </figcaption>
      </figure>
      <figure
        className="Badge badgeGroupItem active"
      >
        <svg />
        <figcaption
          className="label"
        >
          <span
            className="ScreenReaderOnly"
          >
            Has 
          </span>
          Campus
          <span
            className="ScreenReaderOnly"
          >
            availability
          </span>
        </figcaption>
      </figure>
      <figure
        className="Badge badgeGroupItem"
      >
        <svg />
        <figcaption
          className="label"
        >
          <span
            className="ScreenReaderOnly"
          >
            Does not have 
          </span>
          Housing
          <span
            className="ScreenReaderOnly"
          >
            availability
          </span>
        </figcaption>
      </figure>
      <figure
        className="Badge badgeGroupItem active"
      >
        <svg />
        <figcaption
          className="label"
        >
          <span
            className="ScreenReaderOnly"
          >
            Has 
          </span>
          Equipment
          <span
            className="ScreenReaderOnly"
          >
            availability
          </span>
        </figcaption>
      </figure>
    </div>
  </div>
  <div
    className="cardBlock"
  >
    <span
      className="cardBlockTitle"
    >
      Accepts GI Bill
    </span>
    No
  </div>
  <div
    className="cardBlock"
  >
    <span
      className="cardBlockTitle"
    >
      Campus Locations
    </span>
    Los Angeles, CA
  </div>
  <div
    className="cardBlock"
  >
    <a
      className="Button primary fullWidth"
      href="https://codeimmersives.com"
      onClick={[Function]}
    >
      Visit Website
    </a>
  </div>
</article>
`;
